# vcmp-python

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Python VCMP.sln  Python VCMP.vcxproj  Python VCMP.vcxproj.filters  README.md  core.cpp  core.h  main.cpp  main.h  premake5.lua
premake/: win-build.bat
release/: py_config.ini  server-log.txt  server.txt  server64.cfg
release/scripts/: __init__.py
vcmp-python/: .gitignore  core.cpp  core.h
vcmp-python/vcmp/callbacks/: callbacks.cpp  callbacks.h
vcmp-python/vcmp/classes/entity/: checkpoint.cpp  checkpoint.h  object.h  pickup.cpp  pickup.h  player.cpp  player.h  vehicle.cpp  vehicle.h
vcmp-python/vcmp/classes/generic/: game.h  key.h  server.cpp  server.h  stream.cpp  stream.h
vcmp-python/vcmp/classes/utility/: console.cpp  console.h  event_manager.cpp  event_manager.h  utility.cpp  utility.h
vcmp/callbacks/: callbacks.cpp  callbacks.h
vcmp/classes/entity/: checkpoint.cpp  checkpoint.h  object.cpp  object.h  pickup.cpp  pickup.h  player.cpp  player.h  vehicle.cpp  vehicle.h
vcmp/classes/generic/: game.cpp  game.h  key.cpp  key.h  server.cpp  server.h  stream.cpp  stream.h
vcmp/classes/utility/: console.cpp  console.h  event_manager.cpp  event_manager.h  utility.cpp  utility.h
vcmp/sdk/: constants.h  vcmp.h
vcmp_wrapper/callbacks/: callbacks.cpp  callbacks.h
vcmp_wrapper/classes/entity/: checkpoint.cpp  checkpoint.h  object.cpp  object.h  pickup.h  player.cpp  player.h  vehicle.cpp  vehicle.h
vcmp_wrapper/classes/generic/: game.cpp  game.h  key.cpp  key.h  server.cpp  server.h  stream.h
vcmp_wrapper/classes/utility/: console.cpp  console.h  event_manager.cpp  event_manager.h  utility.cpp  utility.h
vcmp_wrapper/sdk/: vcmp.h  vcmp_constants.h
